first attempt to have blr and ocellus coexist

--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -1,47 +1,38 @@
-/*
-css Ocellus
-created by P Kishor
-GitHub: https://github.com/punkish/ocellus
-License: Released into the public domain under CC0
-*/
-header {
-    padding-top: 10px;
+body {
+    font-family: 'Helvetica Neue', Helvetica, Sans-serif;
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin: 0 auto;
+}
+.header {
+    text-align: center;
     background-color: #f5f5f5;
     border-bottom: 1px solid silver;
+    width: 100%;
 }
-a {
-    color: blue;
+.header-component {
+    float: left;
 }
 .title {
-    /* width: 50px; */
-    margin-bottom: 10px;
-    line-height: 15px;
-    text-align: center;
+    line-height: 20px;
+    margin-top: 18px;
 }
-a.main-title {
-    text-decoration: none;
-    color: black;
-    margin-bottom: 0;
-}
-.sub-title {
-    margin-top: -5px;
+sup {
+    font-size: 8px;
 }
 #about-link, #about-close, button {
     cursor: pointer;
 }
 #about-close {
-    /* border: 1px solid grey;
-    border-radius: 5px;
-    width: 50px; */
-    -moz-transition: all 1s ease-in-out;
+       -moz-transition: all 1s ease-in-out;
     -webkit-transition: all 1s ease-in-out;
-    -o-transition: all 1s ease-in-out;
-    -ms-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out;
-    -moz-animation: blink normal 2s infinite ease-in-out;
-    -webkit-animation: blink normal 2s infinite ease-in-out;
-    -ms-animation: blink normal 2s infinite ease-in-out;
-    animation: blink normal 2s infinite ease-in-out;
+         -o-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+            transition: all 1s ease-in-out;
+        -moz-animation: blink normal 2s infinite ease-in-out;
+     -webkit-animation: blink normal 2s infinite ease-in-out;
+         -ms-animation: blink normal 2s infinite ease-in-out;
+             animation: blink normal 2s infinite ease-in-out;
 }
 /* about-close fade-in fade-out */
 @keyframes blink {
@@ -58,302 +49,105 @@ a.main-title {
     75%  { color: rgba(0,0,0,0.5) }
     100% { color: rgba(0,0,0,1  ) }
 }
-
-.off-block {
-    display: block;
-    visibility: hidden;
+#fs-form {
+    overflow: auto;
+    line-height: 8px;
+    margin-top: 0px;
+    margin-bottom: 0 !important;
 }
-.off-none {
-    display: none;
-    visibility: hidden;
-}
-.on {
-    visibility: visible;
-}
-
-/* simple search */
-/* #ss-container {
-    position: relative;
+#fs-form table {
+    padding: 0;
+    margin: 0;
     width: 100%;
-    height: auto;
 }
-.ss {
-    width: calc( 100% - 52px );
-    height: 38px;
-    padding: 0px;
-    float: left;
-    border: 1px solid grey;
+#fs-form td {
+    border: none;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    width: 100%;
+}
+.fs-help {
+    position: relative;
+    text-align: left;
+    text-transform: uppercase;
+    font-size: xx-small;
+    font-weight: 400;
+    padding-left: 5px;
+    color: darkgreen;
+    margin-bottom: 0;
+}
+.fs-container {
+    position: relative;
+    width: calc(100% - 40px);
+    min-height: 36px;
+    border: 1px solid silver;
     border-radius: 5px 0 0 5px;
     background-color: white;
+    padding-left: 0px;
+    padding-right: 0px;
 }
-#fs-go {
-    border-radius: 0 5px 5px 0;
-    background-color: grey !important;
-    border: 1px solid grey !important;
-    color: white !important;
-    padding-left: 15px;
-    padding-right: 15px;
-    height: 40px;
-    width: 50px;
-    position: relative;
+input[type="text"] {
+    width: 95%;
+    height: 36px !important;
+    border: none !important;
+    margin-bottom: 0 !important;
+    padding-left: 5px;
+    
 }
-#fs-go:hover {
-    background-color: green !important;
+input[type="text"]:after {
+    clear: both;
 }
-select {
-    width: 65px;
-    height: 38px;
-    margin-top: -20px;
-    text-align: left;
-    background-color: rgb(235, 228, 228);
-    -moz-appearance: none;
-    border-right: 1px solid grey;
-    border-radius: 5px 0 0 5px;
-}
-#q {
-    width: calc( 100% - 140px );
-    border: none;
-}
-#q.reqd {
+input[type="text"].reqd {
     color: red;
 }
-#refreshCache {
-    margin-right: 15px;
-    margin-top: 13px;
-    margin-bottom: 0;
-    float: right;
+#fs-go {
+    padding: 0px 8px;
+    border-radius: 0 5px 5px 0;
+    border: 1px solid #444;
+    background-color: #444;
+    color: white;
 }
-nav {
-    margin-top: -10px;
-    font-size: 0.8em;
-    padding-left: 5px;
-}
-nav a {
-    padding-right: 10px;
+input[type="checkbox"] {
+    margin-top:5px;
+    margin-left: 5px;
+    float: left;
 }
 .msg {
     font-size: 12px;
     margin-bottom: 0px;
 }
-#refreshCacheWarning {
+.cacheCheckMsg {
     text-align: left;
     line-height: 16px;
     margin-top: 0;
+    color: red;
     font-size: 0.8em;
     margin-bottom: 10px;
-    color: red;
-}*/
-.warning {
-    color: red;
-} 
-.searchContainer {
-    margin-bottom: 10px;
 }
-
-/*
-hide the searchChooser widget on screens 
-smaller than 375px width
-*/
-.searchChooser {
-    font-size: 1rem;
-    padding-left: 5px;
-    /* float: left;
-    margin-top: -15px;
-    margin-right: 10px; */
-    /* display: none;
-    visibility: hidden; */
-    cursor: pointer;
-}
-nav {
-    font-size: 1.4rem;
-    padding-left: 5px;
-    text-align: left;
-    float: left;
-}
-nav a,
-nav span {
-    margin-right: 10px;
-    margin-left: 0;
-}
-#sSearch,
-#fSearch {
-    font-size: 1rem;
-}
-.searchWidget {
-    position: relative;
-    width: 100%;
-    border: none;
-    clear: both;
-    display: table;
-}
-.searchTopBar {
-    position: relative;
-}
-select {
-    width: 75px;
-    height: 40px;
-    text-align: center;
-    background-color: rgb(235, 228, 228);
-    /* -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none; */
-    border-radius: 5px 0 0 5px;
-    border: 1px solid #444;
-    border-right: none;
-    float: left;
-    margin-bottom: 0;
-}
-#sSearch .searchInputs,
-#fSearch .searchInputs {
-    width: calc( 100% - 121px );
-    float: left;
-    background-color: white;
-    border: 1px solid #444;
-    padding: 0;
-}
-#sSearch .searchInputs {
-    height: 38px;
-}
-#fSearch .searchInputs {
-    height: auto;
-}
-#q {
-    width: calc( 100% - 25px );
-    border: none;
-    border-radius: 0;
-}
-.searchButton {
-    border-radius: 0 5px 5px 0;
-    background-color: #444;
-    border: 1px solid #444;
-    color: white !important;
-    padding-left: 12px;
-    height: 40px;
-    width: 40px;
-    position: relative;
-    font-size: unset;
-    line-height: unset;
-    margin-bottom: 0;
-}
-.searchButton:hover {
-    background-color: green !important;
-}
-#refreshCacheWarning {
-    color: red;
-    line-height: 1.1em;
-}
-.searchParams {
-    position: relative;
-    width: calc( 100% - 30px );
-    min-height: 38px;
-    height: auto;
-    float: left;
-}
-/* .fs-param-empty {
-    float: left;
-    display: flex;
-    margin: 2px;
-    font-family: sans-serif;
-    width: calc( 100% - 110px );
-}
-.fs-param-empty > input[type="text"] {
-    border: 0px solid !important;
-    height: 34px !important;
-}
-.fs-key, 
-.fs-val {
-    float: left;
-    padding: 0 5px;
-    height: 32px;
-}
-.fs-key {
-    background-color: grey;
-    color: white;
-    text-transform: uppercase;
-    line-height: 34px
-}
-.fs-val {
-    max-width: 140px;
-    overflow-y: hidden;
-    padding-top: 8px;
-}
-.fs-cancel {
-    float: left;
-    padding: 0 10px;
-    height: 30px;
-    width: 8px;
-    line-height: 32px;
-    background-color: #f5f5f5;
-    color: #ccc;
-    margin-right: 0px;
-    border-radius: 0 5px 5px 0;
-    border: 1px solid #f5f5f5;
-    border-left: 1px solid #ccc;
-}
-.fs-cancel:hover {
-    background-color: red;
-    color: white;
-}
-.fs-key-input,
-.fs-val-input {
-    width: 100%;
-    box-sizing: border-box;
-    border: none !important;
-    font-size: unset;
-    height: 32px;
-    margin: 0;
-    float: left;
-} */
-/* #q:focus,
-input.fs-key-input:focus,
-input.fs-val-input:focus  */
-#q:focus {
-    /* outline: 1px skyblue solid;
-    border-block-end: #ccc 1em; */
-    /* -moz-box-shadow:    inset 0 0 3px #c0c0c0;
-    -webkit-box-shadow: inset 0 0 3px #c0c0c0;
-    box-shadow:         inset 0 0 3px #c0c0c0; */
-    color: green;
-}
-/* .fs-param-filled {
-    border: 1px solid grey;
-    border-radius: 5px;
-    float: left;
-    margin: 2px;
-    font-family: sans-serif;
-    height: 32px;
-    width: auto;
-    max-width: calc( 100% - 40px );
-}
-#fSearch input[type="checkbox"] {
-    margin-top: 12px;
-    margin-bottom: 0;
-} */
 .off-none {
     visibility: hidden;
     display: none;
 }
-/* end simple search */
-
-#about {
-    margin: 0 auto;
+.off-block {
+    visibility: hidden;
+    display: block;
+}
+.on {
+    visibility: visible;
 }
 #about-text {
     margin-top: 12px;
-    /* width: 90%; */
-}
-.about {
-    font-size: 1.5rem;
 }
 h3 {
     font-size: 14px;
     text-align: center;
 }
 .transition-050 {
-        -moz-transition: 0.50s;
+       -moz-transition: 0.50s;
     -webkit-transition: 0.50s;
         -ms-transition: 0.50s;
-            -o-transition: 0.50s;
+         -o-transition: 0.50s;
             transition: 0.50s;
 }
 .opacity85{ 
@@ -361,11 +155,11 @@ h3 {
     filter: alpha(opacity=85); 
 }
 #wrapper {
-    width: 100%;
+    width: 99%;
     margin: 0 auto;
     background-color: white;
     opacity: 1;
-/*     border: 0px solid red; */
+    border: 0px solid red;
 }
 .grid {
     margin: 0em 0;
@@ -375,7 +169,7 @@ h3 {
     flex-wrap: wrap;
 }
 .masonry {
-    margin: 0;
+    margin: 0em 0;
     padding: 0;
     -moz-column-gap: 1em;
     -webkit-column-gap: 1em;
@@ -386,14 +180,14 @@ h3 {
     column-count: 1;
 }
 .item {
-    width: 100%;
+    width: 97%;
     padding: 0px;
-    border: 0px solid black;
+    border: 1px solid silver;
 }
 .masonry figure {
     position: relative;
     overflow: hidden;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     min-height: 200px;
     height: auto;
     margin: 0 0 1em 0 !important;
@@ -407,9 +201,8 @@ h3 {
 }
 .masonry figure img {
     width: 100%;
-/*     border: 0px solid silver; */
+    border: 0px solid silver;
     margin-bottom: 0px;
-    cursor: pointer;
 }
 .masonry figcaption {
     background: rgba(250, 250, 250, 0.8);
@@ -428,24 +221,21 @@ h3 {
     font-weight: 400;
     opacity: 1 !important;
     border: 0px solid grey;
-    cursor: pointer;
+    overflow: hidden;
 }
 .masonry figcaption a {
     cursor: pointer;
-    
     text-decoration: underline;
     text-decoration-color: blue;
-/*     text-decoration-style: double; */
+    text-decoration-style: double;
 }
 .masonry figcaption a.transition-050 {
     text-decoration: none;
-    color: black;
-/*     font-weight: bold; */
 }
 .text {
     color: #000;
     background-color: #fff;
-    font-size:1em;
+    font-size:1.2em;
 }
 .desc {
     display: block;
@@ -489,7 +279,6 @@ footer {
     bottom: 0;
     text-align: center;
     width: 100%;
-    cursor: pointer;
 }
 footer.fixed {
     position: fixed;
@@ -508,9 +297,20 @@ footer img {
 .autocomplete-suggestion {
     font-size: 0.8em;
 }
+
 #carouselContainer {
     cursor: pointer;
 }
+/* b-lazy */
+/* body {
+padding-left: 20px;
+padding-right: 20px;
+}
+
+h1 {
+font-size: 10rem;
+} */
+
 figure {
     margin: 0;
     position: relative;
@@ -602,14 +402,29 @@ figure {
 }
 
 .image-wrapper {
+    /* background: url("https://cdn.dribbble.com/users/91700/screenshots/3038974/loader.gif") center center no-repeat; */
     width: 100%;
     position: relative;
+    /* -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    transition-duration: 400ms;
+    transition-timing-function: ease-out; */
     margin-top: 20px;
     border: 1px solid;
     text-align: center;
 }
 
 .image-wrapper img {
+    /* -webkit-transform: perspective(400px) rotateX(5deg);
+            transform: perspective(400px) rotateX(5deg);
+    transition-property: -webkit-transform;
+    transition-property: transform;
+    transition-property: transform, -webkit-transform;
+    transition-duration: 400ms;
+    transition-timing-function: ease; */
     width:100%
 }
 
@@ -618,79 +433,33 @@ figure {
     text-align: left;
 }
 
-/* Larger than mobile */
-@media (min-width: 400px) {
-    /*
-    show the searchChooser widget on screens 
-    greater than 375px wide
-    */
-    .searchChooser {
-        display: block;
-        visibility: visible;
-    }
-    #sSearch,
-    #fSearch {
-        font-size: 1.2rem;
-    }
-    
-    /* select {
-        width: 50px;
-    } */
-    
-    /* #sSearch .searchInputs,
-    #fSearch .searchInputs {
-        width: calc( 100% - 98px );
-    } */
-    
-    .fs-key, 
-    .fs-val {
-        font-size: unset;
-    }
+@media (min-width: 375px) {}
+@media (min-width: 414px) {
     .masonry {
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
     }
 }
-
-/* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {
-    /* .title {
-        margin-top: 30px;
-    } */
-}
-
-/* Larger than tablet */
-@media (min-width: 750px) {
-    #about {
-        /* width: 80%;
-        max-width: 600px; */
-        margin-left: 90px;
+@media (min-width: 1024px) {
+    .header {
+        padding-top: 20px;
     }
     .title {
         float: left;
-        width: 90px;
-        margin-top: 35px !important;
+        margin-right: 10px;
+        margin-top: 10px;
     }
-    .searchContainer {
-        float: left;
-        width: calc( 100% - 90px );
+    #about {
+        margin: 0 auto;
+        margin-top: 50px;
     }
-    /* .column,.columns {
-        margin-left:2% !important;
-    } */
-    .masonry {
-        -moz-column-count: 3;
-        -webkit-column-count: 3;
-        column-count: 3;
+    .fs-form {
+        margin-bottom: 2em !important;
     }
-}
-
-/* Larger than desktop */
-@media (min-width: 1000px) {
-/*     .column,.columns {
-        margin-left:1% !important;
-    } */
+    .cacheCheckMsg {
+        font-size: 1em;
+    }
     h3 {
         font-size: 16px;
     }
@@ -700,9 +469,7 @@ figure {
         column-count: 4;
     }
 }
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
     .masonry {
         -moz-column-count: 5;
         -webkit-column-count: 5;
