more tweaks to xml.css

--- a/blr/css/xml.css
+++ b/blr/css/xml.css
@@ -36,7 +36,7 @@ location {
 }
 
 geocoordinate {
-    border: 1px solid grey;
+    border: 1px dotted grey;
     border-radius: 5px;
-    background-color: lightgreen;
+    padding: 2px;
 }
