links to entire taxonomic hierarchy

--- a/blr/css/xml.css
+++ b/blr/css/xml.css
@@ -1,5 +1,6 @@
 p.xml {
-    font-family: Georgia, Times, 'Times New Roman', serif
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    margin-top: 24px;
 }
 
 emphasis {
